#17 Fix: File text truncate, lead tag change

--- a/style/components/file.css
+++ b/style/components/file.css
@@ -5,6 +5,11 @@
   min-width: 0;
 }
 
+.file .text-info {
+  width: 100%;
+  overflow: hidden;
+}
+
 .file .file-icon {
   width: 2.5rem;
   object-fit: cover;
@@ -13,7 +18,6 @@
 .file .file-name {
   display: block;
   color: var(--color-heading);
-  width: 75%;
 }
 
 .file .file-size {
